[gd_scene load_steps=11 format=3 uid="uid://csxyquu2r73dc"]

[ext_resource type="Script" uid="uid://dxa4h2xn84qcf" path="res://scenes/start_menu/start_menu.gd" id="1_jwbto"]
[ext_resource type="Script" uid="uid://b6630ncqe6xa2" path="res://scenes/start_menu/title_label.gd" id="2_ujype"]
[ext_resource type="Shader" uid="uid://crhop248vo2ti" path="res://scenes/start_menu/start_menu.gdshader" id="2_uqtq5"]
[ext_resource type="Script" uid="uid://mmjkt8v1e02y" path="res://scenes/resize_btn.gd" id="3_4v5wy"]
[ext_resource type="Texture2D" uid="uid://rqtvw5y1f1w8" path="res://misc_art/start_text.png" id="5_4v5wy"]
[ext_resource type="Texture2D" uid="uid://dbggcc2umb1fg" path="res://misc_art/particle_1.png" id="6_tj3dw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tj3dw"]
shader = ExtResource("2_uqtq5")
shader_parameter/time = 3.0

[sub_resource type="Curve" id="Curve_rudpn"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.119403, 1), 0.0, 0.0, 0, 0, Vector2(0.238806, 0.137441), 0.0, 0.0, 0, 0, Vector2(0.337313, 0.915284), 0.0, 0.0, 0, 0, Vector2(0.474627, 0.276066), 0.0, 0.0, 0, 0, Vector2(0.573134, 0.815166), 0.0, 0.0, 0, 0, Vector2(0.713433, 0.314574), 0.0, 0.0, 0, 0, Vector2(0.850746, 0.67654), 0.0, 0.0, 0, 0, Vector2(1, 0.353081), 0.0, 0.0, 0, 0]
point_count = 9

[sub_resource type="CurveTexture" id="CurveTexture_eum3g"]
curve = SubResource("Curve_rudpn")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gu1vn"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 0.0
emission_ring_radius = 1000.0
emission_ring_inner_radius = 900.0
emission_ring_cone_angle = 90.0
angle_min = 1.07288e-05
angle_max = 720.0
direction = Vector3(0, 0, 0)
gravity = Vector3(0, 0, 0)
radial_accel_min = -15.0
radial_accel_max = -15.0
scale_min = 0.2
scale_curve = SubResource("CurveTexture_eum3g")

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jwbto")

[node name="StartMenuBg" type="ColorRect" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Button" type="Button" parent="."]
z_index = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 2
focus_mode = 0
theme_type_variation = &"FlatButton"
action_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
z_index = -1
z_as_relative = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -58.5
offset_right = 58.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/separation = 70

[node name="TOP_PADDING_LABEL" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
text = "Space Invaders"
script = ExtResource("2_ujype")

[node name="ShopBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Shop"
script = ExtResource("3_4v5wy")

[node name="CreditsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Credits"
script = ExtResource("3_4v5wy")

[node name="BOTTOM_PADDING_LABEL" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tj3dw")
texture = ExtResource("5_4v5wy")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Sprite2D"]
amount = 10000
texture = ExtResource("6_tj3dw")
lifetime = 10.0
preprocess = 15.0
speed_scale = 4.2
process_material = SubResource("ParticleProcessMaterial_gu1vn")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ShopBtn" to="." method="_on_shop_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CreditsBtn" to="." method="_on_credits_button_pressed"]
